--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,13 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "socket.io-client": "^4.6.1",
+    "axios": "^1.6.5",
+    "react-router-dom": "^6.21.1",
+    "emoji-picker-react": "^4.5.16",
+    "react-icons": "^5.0.1",
+    "date-fns": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
