--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,16 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.5",
+    "date-fns": "^3.6.0",
+    "emoji-picker-react": "^4.18.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "socket.io-client": "^4.6.1",
-    "axios": "^1.6.5",
-    "react-router-dom": "^6.21.1",
-    "emoji-picker-react": "^4.5.16",
-    "react-icons": "^5.0.1",
-    "date-fns": "^3.0.6"
+    "socket.io-client": "^4.8.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
